[gd_scene load_steps=4 format=2]

[ext_resource path="res://Snake.gd" type="Script" id=1]
[ext_resource path="res://head.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.0
height = 0.0

[node name="Snake" type="Node2D"]
position = Vector2( 24, 17 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Head" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Head"]
scale = Vector2( 0.749998, 0.65 )

[node name="Sprite" type="Sprite" parent="Head"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="BodyContainer" type="Node2D" parent="."]

[connection signal="area_entered" from="Head" to="." method="_on_Head_area_entered"]
[connection signal="screen_exited" from="Head/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
